@@ -23,6 +23,7 @@ module Gitlab
           build_started_at: build.started_at,
           build_finished_at: build.finished_at,
           build_duration: build.duration,
+          build_allow_failure: build.allow_failure,
 
           # TODO: do we still need it?
           project_id: project.id,
